// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkRating should render correctly 1`] = `
<View>
  <AndroidBPKRatingView
    orientation="horizontal"
    size="base"
    subtitle={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    title={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    value={3}
  />
</View>
`;

exports[`Android BpkRating should render correctly with all props 1`] = `
<View
  orientaion="vertical"
>
  <AndroidBPKRatingView
    orientation="horizontal"
    size="sm"
    subtitle={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    title={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    value={3}
  />
</View>
`;

exports[`Android BpkRating should render correctly with strings instead of arrays 1`] = `
<View>
  <AndroidBPKRatingView
    orientation="horizontal"
    size="lg"
    subtitle={
      Array [
        "single",
      ]
    }
    title={
      Array [
        "single",
      ]
    }
    value={3}
  />
</View>
`;

exports[`Android BpkRating should spread extra properties 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <AndroidBPKRatingView
    orientation="horizontal"
    size="base"
    subtitle={
      Array [
        "single",
      ]
    }
    title={
      Array [
        "single",
      ]
    }
    value={3}
  />
</View>
`;
